updated index.html --> just add some div

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    <div id="title"></div>
 <body>
+    <div id="container">
+        <div id="cont-bill">
+            <div id="bill-title"></div>
+            <div id="bill-input"></div>
+        </div>
+        <div id="cont-person">
+            <div id="person-title"></div>
+            <div id="person-input"></div>
+        </div>
+
+
+    </div>
     
 </body>
 </html>
