rev html, updated css style(not completed)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="title">Bill Total</div>
             <div class="inputContainer">
                 <span>$</span>
-                <input onkeyup="calculateBill()" type="text" id="billTotalINput" placeholder="0.00"
+                <input onkeyup="calculateBill()" type="text" id="billTotalInput" placeholder="0.00"
                 />
             </div>
         </div>
