--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
     <title>Tip Calculator</title>
 </head>
-    <div id="title"></div>
 <body>
-    <div id="wrapper">
+    <div class="wrapper">
         <div class="container" id="topContainer">
             <div class="title">Bill Total</div>
             <div class="inputContainer">
